# RustdroidModding

./: Cargo.toml  README.md  build.rs
src/: detour.rs  il2cpp.rs  il2cpp_imports.rs  lib.rs  logging.rs  unity.rs
