[package]
name = "RustdroidModding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21", features = ["invocation"] }
log = "0.4"
android_logger = "0.14"
libc = "0.2"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
